src/polis/templates/client-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: client-admin
  name: client-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client-admin
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: client-admin
    spec:
      containers:
      - image: polisdemo/client-admin:dev
        imagePullPolicy: ""
        name: polis-client-admin
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
