src/polis/templates/client-participation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: client-participation
  name: client-participation
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client-participation
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: client-participation
    spec:
      containers:
      - image: polisdemo/client-participation:dev
        imagePullPolicy: ""
        name: polis-client-participation
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
