src/polis/templates/file-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: polis
  name: polis-file-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polis
  template:
    metadata:
      labels:
        app: polis
    spec:
      containers:
      - image: polisdemo/file-server:dev
        imagePullPolicy: Always
        name: polis-file-server
        ports:
        - containerPort: 8080
      restartPolicy: Always
