src/polis/templates/maildev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: maildev
  name: maildev
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: maildev
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/polis-dev: "true"
        io.kompose.service: maildev
    spec:
      containers:
      - image: maildev/maildev:1.1.0
        imagePullPolicy: ""
        name: maildev
        ports:
        - containerPort: 80
        - containerPort: 25
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
