src/polis/templates/nginx-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: nginx-proxy
  name: nginx-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx-proxy
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/polis-dev: "true"
        io.kompose.service: nginx-proxy
    spec:
      containers:
      - image: polisdemo/nginx-proxy:dev
        imagePullPolicy: ""
        name: polis-nginx-proxy
        ports:
        - containerPort: 80
        - containerPort: 443
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
