src/polis/templates/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: polis-postgres
  name: polis-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polis-postgres
  template:
    metadata:
      labels:
        app: polis-postgres
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_DB
              name: polis-postgres
        - name: POSTGRES_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_PASSWORD
              name: polis-postgres
        - name: POSTGRES_USER
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_USER
              name: polis-postgres
        image: polisdemo/postgres:dev
        imagePullPolicy: Always
        name: polis-postgres
        volumeMounts:
        - mountPath: /backups
          name: polis-data
          subPath: backups
        - mountPath: /var/lib/postgresql
          name: polis-data
          subPath: postgres
      restartPolicy: Always
      volumes:
      - name: polis-data
        persistentVolumeClaim:
          claimName: polis-data
