src/polis/templates/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: polis
  name: polis-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: polis
    spec:
      containers:
      - env:
        - name: ADMIN_EMAILS
          valueFrom:
            configMapKeyRef:
              key: ADMIN_EMAILS
              name: polis-server
        - name: ADMIN_EMAIL_DATA_EXPORT
          valueFrom:
            configMapKeyRef:
              key: ADMIN_EMAIL_DATA_EXPORT
              name: polis-server
        - name: ADMIN_EMAIL_DATA_EXPORT_TEST
          valueFrom:
            configMapKeyRef:
              key: ADMIN_EMAIL_DATA_EXPORT_TEST
              name: polis-server
        - name: ADMIN_EMAIL_EMAIL_TEST
          valueFrom:
            configMapKeyRef:
              key: ADMIN_EMAIL_EMAIL_TEST
              name: polis-server
        - name: ADMIN_UIDS
          valueFrom:
            configMapKeyRef:
              key: ADMIN_UIDS
              name: polis-server
        - name: AWS_REGION
          valueFrom:
            configMapKeyRef:
              key: AWS_REGION
              name: polis-server
        - name: DATABASE_FOR_READS_NAME
          valueFrom:
            configMapKeyRef:
              key: DATABASE_FOR_READS_NAME
              name: polis-server
        - name: DATABASE_URL
          valueFrom:
            configMapKeyRef:
              key: DATABASE_URL
              name: polis-server
        - name: DEV_MODE
          valueFrom:
            configMapKeyRef:
              key: DEV_MODE
              name: polis-server
        - name: DISABLE_INTERCOM
          valueFrom:
            configMapKeyRef:
              key: DISABLE_INTERCOM
              name: polis-server
        - name: DOMAIN_OVERRIDE
          valueFrom:
            configMapKeyRef:
              key: DOMAIN_OVERRIDE
              name: polis-server
        - name: EMAIL_TRANSPORT_TYPES
          valueFrom:
            configMapKeyRef:
              key: EMAIL_TRANSPORT_TYPES
              name: polis-server
        - name: MATH_ENV
          valueFrom:
            configMapKeyRef:
              key: MATH_ENV
              name: polis-server
        - name: POLIS_FROM_ADDRESS
          valueFrom:
            configMapKeyRef:
              key: POLIS_FROM_ADDRESS
              name: polis-server
        - name: PORT
          valueFrom:
            configMapKeyRef:
              key: PORT
              name: polis-server
        - name: SHOULD_USE_TRANSLATION_API
          valueFrom:
            configMapKeyRef:
              key: SHOULD_USE_TRANSLATION_API
              name: polis-server
        - name: STATIC_FILES_ADMINDASH_PORT
          valueFrom:
            configMapKeyRef:
              key: STATIC_FILES_ADMINDASH_PORT
              name: polis-server
        - name: STATIC_FILES_HOST
          valueFrom:
            configMapKeyRef:
              key: STATIC_FILES_HOST
              name: polis-server
        - name: STATIC_FILES_PORT
          valueFrom:
            configMapKeyRef:
              key: STATIC_FILES_PORT
              name: polis-server
        - name: STRIPE_SECRET_KEY
          valueFrom:
            configMapKeyRef:
              key: STRIPE_SECRET_KEY
              name: polis-server
        - name: WEBSERVER_PASS
          valueFrom:
            configMapKeyRef:
              key: WEBSERVER_PASS
              name: polis-server
        - name: WEBSERVER_USERNAME
          valueFrom:
            configMapKeyRef:
              key: WEBSERVER_USERNAME
              name: polis-server
        image: polisdemo/server:dev
        imagePullPolicy: Always
        name: polis-server
        ports:
        - containerPort: 5000
      restartPolicy: Always
