src/polis/templates/file-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: polis-file-server
  name: file-server
spec:
  ports:
  - name: file-server
    port: 8080
    targetPort: 8080
  selector:
    app: polis-file-server
status:
  loadBalancer: {}
