src/polis/templates/maildev-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: maildev
  name: maildev
spec:
  ports:
  - name: "1080"
    port: 1080
    targetPort: 80
  - name: "25"
    port: 25
    targetPort: 25
  selector:
    io.kompose.service: maildev
status:
  loadBalancer: {}
