src/polis/templates/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: polis-postgres
  name: postgres
spec:
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
  selector:
    app: polis-postgres
status:
  loadBalancer: {}
