src/polis/templates/polis-dev-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: polis-dev
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/polis-dev: "true"
  podSelector:
    matchLabels:
      io.kompose.network/polis-dev: "true"
